<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sort_movies"
        android:title="@string/action_sort_movies"
        android:icon="@drawable/ic_baseline_sort_24px"
        app:showAsAction="ifRoom">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_by_popular_movies"
                    android:checked="true"
                    android:orderInCategory="1"
                    android:title="@string/action_sort_by_most_populat" />
                <item
                    android:id="@+id/action_sort_by_top_rated"
                    android:orderInCategory="2"
                    android:title="@string/action_sort_by_top_rated" />
                <item
                    android:id="@+id/action_sort_by_favorite"
                    android:orderInCategory="3"
                    android:title="@string/action_sort_by_favorite" />
            </group>
        </menu>
    </item>
</menu>