<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/movie_details_default_margin"
        android:orientation="vertical"
        tools:context=".activities.MovieDetailsActivity">

        <TextView
            android:id="@+id/tv_movie_title"
            style="@style/MovieTitle" />

        <ImageView
            android:id="@+id/imv_movie_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/movie_poster_description"
            android:layout_marginBottom="20dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:contentDescription="@string/vote_average_description"
                    android:src="@drawable/ic_star_rate" />

                <TextView
                    android:id="@+id/tv_vote_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:paddingLeft="20dp"
                    android:text="@string/release_date" />

                <TextView
                    android:id="@+id/tv_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>




            <TextView
                android:id="@+id/tv_plot"
                android:paddingTop="20dp"
                android:paddingBottom="5dp"
                android:text="@string/plot"
                style="@style/SectionTitle" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/tv_trailers_title"
                android:text="@string/movie_videos_title"
                style="@style/SectionTitle"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/movie_videos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/spacing_medium"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

            <TextView
                android:id="@+id/tv_trailers_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"/>

            <TextView
                android:id="@+id/tv_trailers_try_again"
                android:text="@string/msg_try_again"
                style="@style/TextTryAgain"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingBottom="30dp">


            <TextView
                android:id="@+id/tv_reviews_title"
                android:text="@string/movie_reviews_title"
                style="@style/SectionTitle"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/movie_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/spacing_medium"
                android:paddingBottom="@dimen/spacing_medium"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

            <TextView
                android:id="@+id/tv_reviews_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"/>

            <TextView
                android:id="@+id/tv_reviews_try_again"
                android:text="@string/msg_try_again"
                style="@style/TextTryAgain"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>